Initial update, need to make a choice about object identity